Updates: Fix boostrap pagination on product lists, change z-index loading

--- a/Resources/scss/main.scss
+++ b/Resources/scss/main.scss
@@ -16,6 +16,6 @@
     top: 0;
     left: 0;
     background-color: rgba(255,255,255,0.7);
-    z-index: 1;
+    z-index: 9;
   }
 }
